Bug 1351205 - Skip debug check for Stylo in nsComputedDOMStyle::UpdateCurrentStyleSources(). r=heycam

The debug code calls nsStyleContext::GetParent(), which is invalid in stylo.
Let's skip it.

MozReview-Commit-ID: 5opMaSuyoNr

--HG--
extra : rebase_source : e316b5d45ebe634a63ef0e44ed0b7183551551d4